[gd_scene load_steps=23 format=3 uid="uid://dbe62th8b3h7r"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_ejntv"]
[ext_resource type="PackedScene" uid="uid://q3j7juu1j22q" path="res://scenes/Mob.tscn" id="2_gb1yj"]
[ext_resource type="PackedScene" uid="uid://bylfbpe4t2bj8" path="res://scenes/Player.tscn" id="3_4njg7"]
[ext_resource type="PackedScene" uid="uid://b8faj1rq2wdga" path="res://scenes/MobFlash.tscn" id="3_tmxv5"]
[ext_resource type="PackedScene" uid="uid://dle44wdvem7or" path="res://scenes/HUD.tscn" id="4_44pns"]
[ext_resource type="AudioStream" uid="uid://dsry722qdrql3" path="res://art/House In a Forest Loop.ogg" id="5_1ima1"]
[ext_resource type="AudioStream" uid="uid://cy0o26sdwqpdh" path="res://art/gameover.wav" id="6_mgqgs"]
[ext_resource type="PackedScene" uid="uid://c65oao5sntvso" path="res://scenes/MobObstacle.tscn" id="7_7havj"]
[ext_resource type="Script" path="res://scripts/MobSpawner.gd" id="7_fg8rl"]
[ext_resource type="Script" path="res://scripts/JoyStickHandler.gd" id="7_hdq0m"]
[ext_resource type="PackedScene" uid="uid://dghp2gncrgobu" path="res://scenes/JoyStick.tscn" id="8_5lhya"]
[ext_resource type="PackedScene" uid="uid://bqiobo4vyvq43" path="res://scenes/MobExplode.tscn" id="8_n05so"]
[ext_resource type="PackedScene" uid="uid://d4ho7cvla4rq8" path="res://scenes/Shadow.tscn" id="8_toup8"]
[ext_resource type="Script" path="res://scripts/MobSpawnPositionHandler.gd" id="9_3sdn3"]
[ext_resource type="Resource" uid="uid://b5kt7w2ogmx56" path="res://resources/mob_event_first.tres" id="11_em6as"]
[ext_resource type="PackedScene" uid="uid://4t06cdhcknx3" path="res://scenes/bubble_handler.tscn" id="12_2p1r6"]
[ext_resource type="Resource" uid="uid://dqr68m0hssefi" path="res://resources/mob_event_second.tres" id="12_4dtth"]
[ext_resource type="Script" path="res://scripts/MobsEventHandler.gd" id="12_urh7m"]
[ext_resource type="PackedScene" uid="uid://cx2ltcncghsm6" path="res://scenes/MobFollower.tscn" id="12_w6318"]
[ext_resource type="Resource" uid="uid://cfjb5mmjtr6i3" path="res://resources/mob_event_third.tres" id="13_q2wx6"]
[ext_resource type="Resource" uid="uid://dxxdyonrep8ne" path="res://resources/mob_event_fourth.tres" id="14_1epfv"]
[ext_resource type="Resource" uid="uid://dj8bd4mokvca" path="res://resources/mob_event_fifth.tres" id="15_nl8hl"]

[node name="Main" type="Node"]
script = ExtResource("1_ejntv")
metadata/_edit_vertical_guides_ = [-271.0]

[node name="MobSpawner" type="Node" parent="."]
script = ExtResource("7_fg8rl")
shadow = ExtResource("8_toup8")
mob_common = ExtResource("2_gb1yj")
mob_flash = ExtResource("3_tmxv5")
mob_follower = ExtResource("12_w6318")
mob_obstacle = ExtResource("7_7havj")
mob_explode = ExtResource("8_n05so")

[node name="MobSpawnPositionHandler" type="Node" parent="."]
script = ExtResource("9_3sdn3")
spawn_position_offset = 30.0

[node name="MobsEventHandler" type="Node" parent="."]
script = ExtResource("12_urh7m")
events = Array[Resource("res://scripts/resources/mobEventAbstract.gd")]([ExtResource("11_em6as"), ExtResource("12_4dtth"), ExtResource("14_1epfv"), ExtResource("13_q2wx6"), ExtResource("15_nl8hl")])

[node name="JoyStickHandler" type="Node" parent="."]
script = ExtResource("7_hdq0m")
joy_stick = ExtResource("8_5lhya")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SpecialMobsTimer" type="Timer" parent="."]

[node name="EventTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.104427, 0.463137, 0.479078, 1)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(202, 450)

[node name="BubbleHandler" parent="." instance=ExtResource("12_2p1r6")]
z_index = 0

[node name="Player" parent="." node_paths=PackedStringArray("joystick_handler") instance=ExtResource("3_4njg7")]
joystick_handler = NodePath("../JoyStickHandler")

[node name="HUD" parent="." instance=ExtResource("4_44pns")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1ima1")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mgqgs")

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="SpecialMobsTimer" to="." method="_on_special_mobs_timer_timeout"]
[connection signal="timeout" from="EventTimer" to="." method="_on_mobs_event_start"]
[connection signal="hit" from="Player" to="." method="_game_over"]
[connection signal="hit" from="Player" to="JoyStickHandler" method="_on_player_hit"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="start_game" from="HUD" to="JoyStickHandler" method="_on_hud_start_game"]
